@@ -1,3 +1,11 @@
+2007-04-27  Didier Verna  <didier@xemacs.org>
+
+	* gnus-util.el (gnus-orify-regexp): Moved and renamed to ...
+	* gmm-utils.el (gmm-regexp-concat): here.
+	* message.el: Don't require 'gnus-util.
+	(message-dont-reply-to-names): Handle name change above.
+	* gnus-sum.el (gnus-ignored-from-addresses): Ditto.
+
 2007-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mm-util.el (mm-charset-synonym-alist): Don't make it a user option
